[gd_scene load_steps=3 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
border_color = Color( 1, 1, 1, 1 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = -1.0
margin_top = 16.0
margin_right = 1022.0
margin_bottom = 119.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 1 )
text = "atividade 1"
valign = 1

[node name="Button" type="Button" parent="Label"]
margin_left = 429.0
margin_top = 36.0
margin_right = 518.0
margin_bottom = 79.0
text = "exibir"

[node name="Label" type="Label" parent="Label"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 571.0
margin_top = 14.0
margin_right = 768.0
margin_bottom = 86.0
align = 1
valign = 1

[node name="Label2" type="Label" parent="."]
margin_left = 1.0
margin_top = 167.0
margin_right = 1024.0
margin_bottom = 273.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_styles/normal = SubResource( 1 )
text = "atividade 2"
valign = 1

[node name="TextEdit" type="TextEdit" parent="Label2"]
margin_left = 94.0
margin_top = 2.0
margin_right = 240.0
margin_bottom = 105.0

[node name="Button" type="Button" parent="Label2"]
margin_left = 421.0
margin_top = 26.0
margin_right = 522.0
margin_bottom = 68.0
text = "salvar e exibir"

[node name="Label" type="Label" parent="Label2"]
anchor_bottom = 0.066
margin_left = 590.0
margin_top = 19.0
margin_right = 732.0
margin_bottom = 85.004
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
align = 1
valign = 1

[node name="Label3" type="Label" parent="."]
anchor_right = 1.0
margin_left = -1.0
margin_top = 328.0
margin_right = 1022.0
margin_bottom = 440.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 1 )
text = "atividade 3"
valign = 1

[node name="Button" type="Button" parent="Label3"]
margin_left = 420.0
margin_top = 23.0
margin_right = 533.0
margin_bottom = 63.0
text = "exibir texto"

[node name="Label" type="Label" parent="Label3"]
margin_left = 585.0
margin_top = 4.0
margin_right = 746.0
margin_bottom = 111.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
align = 1
valign = 1

[node name="Label4" type="Label" parent="."]
margin_top = 493.0
margin_right = 1023.0
margin_bottom = 596.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 1 )
text = "atividade 4"
valign = 1

[node name="Button" type="Button" parent="Label4"]
margin_left = 422.0
margin_top = 27.0
margin_right = 563.0
margin_bottom = 69.0
text = "salvar e exibir texto"

[node name="Label" type="Label" parent="Label4"]
margin_left = 612.0
margin_top = 11.0
margin_right = 773.0
margin_bottom = 88.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
align = 1
valign = 1

[node name="TextEdit" type="TextEdit" parent="Label4"]
margin_left = 95.0
margin_top = -1.0
margin_right = 246.0
margin_bottom = 104.0

[connection signal="pressed" from="Label/Button" to="." method="_on_ButtonAtividade1_pressed"]
[connection signal="pressed" from="Label2/Button" to="." method="_on_ButtonAtividade2_pressed"]
[connection signal="pressed" from="Label3/Button" to="." method="_on_ButtonAtividade3_pressed"]
[connection signal="pressed" from="Label4/Button" to="." method="_on_ButtonAtividade4_pressed"]
